--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <form action="/reg-numbers" method="POST">
 <div id="box" class="col-12">
             <div class="col-12 center">
-                <input type="text" class="enteredRegNum" placeholder="Enter Valid Reg Number" name="reg">
+                <input type="text" class="enteredRegNum"  placeholder="eg. CA 123-123" name="reg">
            
         </div>
 
