color for error message

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,7 @@
  
         <br><br>
 
-        <div class='col-12 center'>
+        <div class='col-12 center' style="color: red;">
             {{messages.error}}
         </div>
 
